<?xml version="1.0"?>
<package format="3">
  <name>qwen_pkg_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for Qwen service</description>
  <maintainer email="jchenjb@connect.ust.hk">cjh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
